[package]
name = "qrupcode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
clap = { version = "3.1.6", features = [ "derive", "color", "suggestions" ] }
qrcode = "0.12.0"

[features]
